{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 11,
  "lineage": "73221908-0d41-7408-27ee-8ac1a77287e7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-26T07:41:51.578-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/globalconnect-dev/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/global/networks/vpn-network",
            "params": [],
            "priority": 1000,
            "project": "globalconnect-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpn_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_wireguard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "51820"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-02-26T07:41:51.141-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/globalconnect-dev/global/firewalls/allow-wireguard",
            "log_config": [],
            "name": "allow-wireguard",
            "network": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/global/networks/vpn-network",
            "params": [],
            "priority": 1000,
            "project": "globalconnect-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/global/firewalls/allow-wireguard",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpn_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vpn_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260225",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/zones/europe-west1-b/disks/vpn-node-us-east"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-26T08:06:24.727-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/globalconnect-dev/zones/europe-west1-b/instances/vpn-node-us-east",
            "instance_id": "130543373664506256",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "I2DKJu3U6yU=",
            "metadata_startup_script": "#!/bin/bash\n# VPN Node Agent Startup Script\n\n# 1. Update and Install Dependencies\napt-get update\napt-get install -y wireguard-tools iptables git wget\n\n# 2. Enable IPv4 Forwarding (Critical for VPN)\necho \"net.ipv4.ip_forward=1\" \u003e\u003e /etc/sysctl.conf\nsysctl -p\n\n# 3. Setup basic NAT (Masquerade)\n# Assuming 'eth0' is the public interface and 'wg0' is the tunnel\niptables -t nat -A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE\n# Make i [...]
            "name": "vpn-node-us-east",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.62.136.247",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/global/networks/vpn-network",
                "network_ip": "10.132.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/regions/europe-west1/subnetworks/vpn-network",
                "subnetwork_project": "globalconnect-dev",
                "vlan": 0
              }
            ],
            "project": "globalconnect-dev",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/zones/europe-west1-b/instances/vpn-node-us-east",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "vpn",
              "wireguard"
            ],
            "tags_fingerprint": "jreaVCPP0WE=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpn_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpn_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/globalconnect-dev/global/networks/vpn-network",
            "mtu": 0,
            "name": "vpn-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "926827501434296188",
            "numeric_id": "926827501434296188",
            "project": "globalconnect-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/globalconnect-dev/global/networks/vpn-network"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}